# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: database.py  main.py  pyproject.toml
backend/core/: dependencies.py  security.py
backend/models/: auth.py  chat.py  documents.py
backend/routes/: auth.py  chat.py  documents.py
backend/services/: ai_service.py  auth_service.py  document_service.py
community_contributions/: EXPLANATION.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthModal.tsx  ChatInterface.tsx  CloudServicePdf.tsx  CloudServicePreview.tsx  DocumentDownload.tsx  DocumentPreview.tsx  DocumentsModal.tsx  DownloadButton.tsx  GenericPdf.tsx  GenericPreview.tsx  NDAForm.tsx  NDAPdf.tsx  NDAPreview.tsx  PilotPdf.tsx  PilotPreview.tsx  SaveDocumentButton.tsx  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: chatApi.ts
frontend/src/types/: auth.ts  chat.ts  documents.ts
frontend/src/utils/: documentConfig.ts
scripts/: start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
