[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Backend API for Prelegal legal document SaaS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.55.0",
]

[tool.uv]
package = false
